# Text-Editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
forms/: texteditor.ui
include/: DoublyLinkedList.hpp  LinkedList.hpp  Stack.hpp  TextEditor.h  TextEditorManager.h  TextEditorManger.h  main.h  mainwindow.h
include/data structures/: DoublyLinkedList.hpp  DynamicArray.hpp  Stack.hpp
src/: TextEditor.cpp  TextEditorManager.cpp  main.cpp  mainwindow.cpp
